2008-11-14 [colin]	0.22.0cvs1

	* src/feed.c
		Fix threading of comments with newer
		Wordpress blogs

2008-10-10 [paul]	0.22

	0.22 released

2008-10-04 [colin]	0.21.0cvs2

	* src/claws.def
		Fix symbols

2008-10-04 [colin]	0.21.0cvs1

	* src/plugin.c
		Win32: set translation dir

2008-10-03 [paul]	0.21

	0.21 released

2008-10-03 [paul]	0.20.0cvs19

	* configure.ac
	* po/ru.po
		added by Aleksei Miheev
	* po/ca.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
		updated by Miquel Oliete, Flammie Pirinen,
		Colin Leroy, Pader Rezo

2008-09-30 [colin]	0.20.0cvs18

	* src/date.c
		Fix time usage

2008-09-28 [colin]	0.20.0cvs17

	* src/claws.def
	* src/feed.c
		Don't use mkstemp on Win32

2008-09-28 [colin]	0.20.0cvs16

	* src/claws.def
		Fix def file

2008-09-28 [colin]	0.20.0cvs15

	* src/date.c
		Don't use strptime on windows

2008-09-28 [colin]	0.20.0cvs14

	* src/date.c
		Define _XOPEN_SOURCE prior to inclusion
		of pthread.h (fixes warning)

2008-09-28 [colin]	0.20.0cvs13

	* src/claws.def
	* src/date.c
	* src/feed.c
	* src/rssyl_cb_gtk.c
	* src/rssyl_cb_menu.c
		Win32 fixes - still misses a reimplementation
		of strptime using sscanf or equivalent

2008-09-28 [colin]	0.20.0cvs12

	* src/date.c
		Fix warning

2008-09-27 [colin]	0.20.0cvs11

	* configure.ac
	* src/Makefile.am
	* src/claws.def
	* src/date.c
	* src/feed.c
	* src/plugin.def
	* src/version.rc
		Prepare windows port

2008-08-17 [colin]	0.20.0cvs10

	* src/feed.c
		Warning fix

2008-08-14 [colin]	0.20.0cvs9

	* src/opml.c
		Fix bug 1694, 'OPML import segfault in 
		folder_create_folder()' Use 'text' instead
		of 'title' if title doesn't exist.

2008-08-14 [colin]	0.20.0cvs8

	* src/opml.c
		Fix bug 1694, 'OPML import segfault in 
		folder_create_folder()' Use 'text' instead
		of 'title' if title doesn't exist.

2008-08-07 [colin]	0.20.0cvs7

	* src/rssyl_gtk.c
		Undeprecate

2008-08-05 [colin]	0.20.0cvs6

	* src/plugin.c
	* src/rssyl_cb_menu.c
		Undeprecate GtkCTree

2008-07-30 [colin]	0.20.0cvs5
