@@ -14,6 +14,7 @@
 #define RSSYL_PROP_DEF_EXPIRED	"default_expired_num"
 #define RSSYL_PROP_EXPIRED			"expired_num"
 #define RSSYL_PROP_FETCH_COMMENTS		"fetch_comments"
+#define RSSYL_PROP_FETCH_COMMENTS_FOR		"fetch_comments_for"
 
 void rssyl_store_feed_props(RSSylFolderItem *ritem);
 void rssyl_get_feed_props(RSSylFolderItem *ritem);
